# cursorhub

./: .gitignore  README.md  install.sh  pyproject.toml
scripts/: generate_icon.py  seed_mock_data.py
src/cursorhub/: __init__.py  ai_analysis.py  analytics.py  app.py  backup.py  cli.py  config.py  prompts.py  tour.py  ui.py
